add zerolog middleware for gin

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/github.com/gin-gonic/gin"]
 	path = vendor/github.com/gin-gonic/gin
 	url = https://github.com/gin-gonic/gin
+[submodule "vendor/github.com/rs/zerolog"]
+	path = vendor/github.com/rs/zerolog
+	url = https://github.com/rs/zerolog
