add basic http with graceful

--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,9 @@
 [submodule "vendor/github.com/pkg/errors"]
 	path = vendor/github.com/pkg/errors
 	url = https://github.com/pkg/errors
+[submodule "vendor/github.com/tylerb/graceful"]
+	path = vendor/github.com/tylerb/graceful
+	url = https://github.com/tylerb/graceful
+[submodule "vendor/golang.org/x/net"]
+	path = vendor/golang.org/x/net
+	url = https://go.googlesource.com/net
